--- a/style.css
+++ b/style.css
@@ -1,10 +1,65 @@
+@font-face {
+    font-family: 'NeueHaasDisplay-Mediu';
+    src: url('font/64d3dd9edfb41666c35b15bf_NeueHaasDisplay-Mediu\ \(2\).ttf');
+}
+
+:root{
+    --background-color:#EFEAE3;
+    --accent-color:#FE330A;
+}
+
 *{
     margin: 0;
     padding: 0;
     box-sizing:border-box;
+    font-family: 'NeueHaasDisplay-Mediu';
 }
 
 body{
     width: 100%;
     height: 100%;
 }
+
+/* #main{
+    width: 100%;
+    height: 100%;
+} */
+
+section{
+    width: 100%;
+    height: 100vh;
+    background-color: var(--background-color);
+}
+
+/* -----Navigation Bar----- */
+
+#navbar{
+    position: relative;
+    width: 100%;
+    height: 6rem;
+    padding: 2vw 3vw;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.logo{
+    padding: 10px;
+    flex-basis: 60%;
+}
+.nav-buttons{
+    flex-basis: 40%;
+    display: flex;
+    align-items: center;
+    justify-content: end;
+    gap: 1rem;
+}
+  
+.nav-btn{
+    /* font-size: 1rem; */
+    padding: 10px 20px;
+    background-color: transparent;
+    border: 1px solid #8a8a8a89;
+    border-radius:1.875rem ;
+}
+
+
