--- a/style.css
+++ b/style.css
@@ -1,236 +1,267 @@
 @font-face {
-    font-family: 'NeueHaasDisplay-Mediu';
-    src: url('font/64d3dd9edfb41666c35b15bf_NeueHaasDisplay-Mediu\ \(2\).ttf');
+  font-family: "NeueHaasDisplay-Mediu";
+  src: url("font/64d3dd9edfb41666c35b15bf_NeueHaasDisplay-Mediu\ \(2\).ttf");
 }
 
-:root{
-    --background-color:#EFEAE3;
-    --accent-color:#FE330A;
+:root {
+  --background-color: #efeae3;
+  --accent-color: #fe330a;
 }
 
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing:border-box;
-    font-family: 'NeueHaasDisplay-Mediu';
-    
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "NeueHaasDisplay-Mediu";
 }
 
-body{
-    width: 100%;
-    height: 100%;
+body {
+  width: 100%;
+  height: 100%;
 }
 
-#main{
-    position: relative;
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
+#main {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
 }
 
-.section-1{
-    width: 100%;
-    min-height: 100vh;
-    padding: 2vh 3vh;
-    background-color: var(--background-color);
+.section-1 {
+  width: 100%;
+  min-height: 100vh;
+  padding: 2vh 3vh;
+  background-color: var(--background-color);
 }
 
 /* -----Navigation Bar----- */
 
-#navbar{
-    position: relative;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
- 
-.logo{
-    padding: 10px;
-    flex-basis: 60%;
+#navbar {
+  position: relative;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
-.nav-buttons{
-    flex-basis: 40%;
-    display: flex;
-    align-items: center;
-    justify-content: end;
-    gap: 1rem;
-}
-  
-.nav-btn{
-    position: relative;
-    font-size: 1rem;
-    padding: 12px 24px;
-    background-color: transparent;
-    border: 1px solid #00000057;
-    border-radius:1.875rem;
-    overflow: hidden;
-    cursor: pointer;
-    font-weight: 100;
+.logo {
+  padding: 10px;
+  flex-basis: 60%;
 }
 
-.nav-btn a{
-    text-decoration: none;
-    color: #000;
-    z-index: 999;
-    position:relative;
-    transition: all ease 0.4s;
+.nav-buttons {
+  flex-basis: 40%;
+  display: flex;
+  align-items: center;
+  justify-content: end;
+  gap: 1rem;
 }
 
-.nav-btn::after{
-    content: '';
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background-color: #000;
-    left: 0;
-    bottom:-100%;
-    border-radius: 50%;
-    transition: all ease 0.3s;
+.nav-btn {
+  position: relative;
+  font-size: 1rem;
+  padding: 12px 24px;
+  background-color: transparent;
+  border: 1px solid #00000057;
+  border-radius: 1.875rem;
+  overflow: hidden;
+  cursor: pointer;
+  font-weight: 100;
 }
 
-.nav-btn:hover:after{
-    bottom: 0;
-    border-radius: 0;
-    color: #fff;
+.nav-btn a {
+  text-decoration: none;
+  color: #000;
+  z-index: 999;
+  position: relative;
+  transition: all ease 0.4s;
+}
+
+.nav-btn::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: #000;
+  left: 0;
+  bottom: -100%;
+  border-radius: 50%;
+  transition: all ease 0.3s;
+}
+
+.nav-btn:hover:after {
+  bottom: 0;
+  border-radius: 0;
+  color: #fff;
 }
 
 .nav-btn:hover a {
-    color: #fff;
+  color: #fff;
 }
 
-#hero{
-    width: 100%;
-    height: 70vh;
-    display: flex;
-    align-items: flex-end;
-    justify-content: space-between;
-    border-bottom: 1px solid #00000057;
-    padding-bottom: 50px;
+#hero {
+  width: 100%;
+  height: 70vh;
+  display: flex;
+  align-items: flex-end;
+  justify-content: space-between;
+  border-bottom: 1px solid #00000057;
+  padding-bottom: 50px;
 }
 
-.left{ 
-    flex-basis: 28%;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    align-items: end;
+.left {
+  flex-basis: 28%;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: end;
 }
 
-.left h2{
-    font-size: 1.7rem;
-    line-height: 1.8vw;
-    letter-spacing: -1px;
-    padding-right: 20px;
+.left h2 {
+  font-size: 1.7rem;
+  line-height: 1.8vw;
+  letter-spacing: -1px;
+  padding-right: 20px;
 }
 
-.right{
-    flex-basis: 50%;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    align-items: end;
-    justify-content: flex-end;
+.right {
+  flex-basis: 50%;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: end;
+  justify-content: flex-end;
 }
 
-.right h1{
-    font-size: 10rem;
-    line-height: 9vw;
-    display: flex;
-    align-items: end;
-    justify-content: end;
-    text-transform: uppercase;
-    letter-spacing: -0.5vw;
-    text-align: end;
-    margin-right: 20px;
+.right h1 {
+  font-size: 10rem;
+  line-height: 9vw;
+  display: flex;
+  align-items: end;
+  justify-content: end;
+  text-transform: uppercase;
+  letter-spacing: -0.5vw;
+  text-align: end;
+  margin-right: 20px;
 }
 
-.video-container{
-    margin-top: 50px;
-    width: 100%;
-    height: 80vh;
-    position: relative;
-    
+.video-container {
+  margin-top: 50px;
+  width: 100%;
+  /* height: 10vw; */
+  position: relative;
 }
 
-.video-container video{
-    width: 100%;
-    border-radius: 20px;
-    z-index: 998;
-    position: relative;
+.video-container video {
+  width: 100%;
+  /* height: 100%; */
+  border-radius: 20px;
+  z-index: 998;
+  position: relative;
 }
 
-.hero-animation-shape{
-    position: absolute;
-    width: 46vw;
-    height: 36vw;
-    right: 18px;
-    top: 70vh;
-    filter: blur(30px);
-    z-index: 8;
+.hero-animation-shape {
+  position: absolute;
+  width: 46vw;
+  height: 36vw;
+  right: 18px;
+  top: 70vh;
+  filter: blur(30px);
+  z-index: 8;
 }
 
-.shape-1{
-    position: absolute;
-    width: 66vw;
-    height: 36vw;
-    background-color: var(--accent-color);
-    border-radius: 50%;
-    filter: blur(20px);
-    border-top-left-radius: 50%;
-    border-bottom-left-radius: 50%;
-    /* transform:rotateY('30deg'); */
+.shape-1 {
+  position: absolute;
+  width: 66vw;
+  height: 40vw;
+  background-color: var(--accent-color);
+  border-radius: 50%;
+  filter: blur(20px);
+  border-top-left-radius: 50%;
+  border-bottom-left-radius: 50%;
+  /* transform:rotateY('30deg'); */
 }
-.shape-2{
-    position: absolute;
-    width: 30vw;
-    height: 30vw;
-    background-color: var(--accent-color);
-    border-radius: 50%;
-    filter: blur(20px);
-    border-top-left-radius: 50%;
-    border-bottom-left-radius: 50%;
-    animation: anime-1 ease infinite 5s alternate;
+.shape-2 {
+  position: absolute;
+  width: 30vw;
+  height: 30vw;
+  background-color: var(--accent-color);
+  border-radius: 50%;
+  filter: blur(20px);
+  border-top-left-radius: 50%;
+  border-bottom-left-radius: 50%;
+  animation: anime-1 ease infinite 3s alternate;
 }
-.shape-3{
-    position: absolute;
-    width: 30vw;
-    height: 30vw;
-    background-color: var(--accent-color);
-    border-radius: 50%;
-    filter: blur(20px);
-    border-top-left-radius: 50%;
-    border-bottom-left-radius: 50%;
-    animation: anime-2 linear infinite 5s alternate ;
+.shape-3 {
+  position: absolute;
+  width: 30vw;
+  height: 30vw;
+  background-color: var(--accent-color);
+  border-radius: 50%;
+  filter: blur(20px);
+  border-top-left-radius: 50%;
+  border-bottom-left-radius: 50%;
+  animation: anime-2 linear infinite 3s alternate;
 }
 
 @keyframes anime-1 {
-    from{
-        transform: translate(25%,-5%)
-    }
-    to{
-        transform: translate(0%,-15%)
-    }
+  from {
+    transform: translate(25%, -5%);
+  }
+  to {
+    transform: translate(0%, -15%);
+  }
 }
-
 
 @keyframes anime-2 {
-    from{
-        transform: translate(0,5%)
-    }
-    to{
-        
-        transform: translate(-20%,20%);
-    }
+  from {
+    transform: translate(0, 5%);
+  }
+  to {
+    transform: translate(-20%, 20%);
+  }
 }
 
+/* ---------------SECTION-2----------------- */
 
-@keyframes anime-3 {
-    from{
-        transform: translate(-10%,-10%)
-    }
-    to{
-        transform: translate(0,0)
-    }
+.section-2{
+    width: 100%;
+    min-height: 100vh;
+    padding-top: 6vw;
+    background-color: var(--background-color);
+}
+
+.moving-texts{
+    width: 100%;
+    height: 10rem;
+    white-space: nowrap;
+    overflow-x: auto;
+}
+
+.moving-texts::-webkit-scrollbar{
+    display: none;
+}
+
+.moving-text-container{
+    
+    height: 100%;
+    display: inline-block;
+    white-space: nowrap;
+    
+}
+
+.moving-text-container h1{
+    font-size: 10rem;
+    display: inline-block;
+}
+
+.moving-text-container .circle{
+    display: inline-block;
+    width: 60px;
+    height: 60px;
+    background-color: var(--accent-color);
+    border-radius: 50%;
+    margin: 1rem ;
+    padding: 40px;
+
 }
