--- a/style.css
+++ b/style.css
@@ -476,4 +476,16 @@ section {
   font-weight: 100;
 }
 
+#fixed-images{
+  width: 23vw;
+  height: 30vw;
+  background-color: red;
+  border-radius: 10px;
+  position: fixed;
+  z-index: 9999;
+  right: 390px;
+  top: 190px;
+  display: none;
+}
+
 
