--- a/style.css
+++ b/style.css
@@ -28,19 +28,23 @@ body {
 
 #main {
   position: relative;
-  width: 100%;
-  height: 100%;
+  
   overflow: hidden;
+  background-color: #000;
+  z-index: 10;
 }
 
 section {
   width: 100%;
   min-height: 100vh;
   padding: 2vh 3vh;
-  background-color: var(--background-color);
 }
 
 /* -----Navigation Bar----- */
+
+.section-1{
+  background-color: var(--background-color);
+}
 
 #navbar {
   position: relative;
@@ -231,12 +235,9 @@ section {
 
 /* ---------------SECTION-2----------------- */
 
-/* .section-2{
-    width: 100%;
-    min-height: 100vh;
-    padding-top: 6vw;
-    background-color: var(--background-color);
-} */
+.section-2{
+  background-color: var(--background-color);
+}
 
 .moving-texts{
     width: 100%;
@@ -378,7 +379,9 @@ section {
 /* ----------------------------Section-3---------------------- */
 .section-3{
   padding: 0;
+  background-color: var(--background-color);
 }
+
 .featured-projects_section{
   width: 100%;
   min-height: 100vh;
@@ -469,11 +472,44 @@ section {
   outline: none;
   border:  1px solid #00000095;
   font-size: 1rem;
+  position: relative;
+  overflow: hidden;
+  background-color: transparent;
 }
 
 .all-project-btn h3{
   margin-right: 10px;
   font-weight: 100;
+  
+}
+.all-project-btn::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: #000;
+  left: 0;
+  bottom: -100%;
+  border-radius: 50%;
+  transition: all ease 0.3s;
+}
+
+.all-project-btn:hover:after {
+  bottom: 0;
+  border-radius: 0;
+  color: #fff;
+  opacity: 100%;
+}
+
+.all-project-btn:hover h3{
+  color: #fff;
+  z-index: 9;
+
+}
+
+.all-project-btn:hover i{
+  color: #fff;
+  z-index: 9;
 }
 
 #fixed-images{
@@ -486,6 +522,34 @@ section {
   top: 190px;
   display: none;
   background-size: cover;
+}
+
+.section-4{
+  width: 100%;
+  height: 60vh;
+  background-color: var(--background-color);
+}
+.section-5{
+  width: 100%;
+  height: 100vh;
+ 
+  /* background-color: var(--background-color); */
+}
+
+.footer{
+  position: fixed;
+  
+  z-index: 9;
+  height: 60vw;
+  width: 100%;
+  bottom: 0;
+  left: 0;
+  background-color: red;
+}
+
+.footer h1{
+  color: #fff;
+  font-size: 20rem;
 }
 
 
