--- a/style.css
+++ b/style.css
@@ -24,17 +24,19 @@
 body {
   width: 100%;
   height: 100%;
+  overflow-x: hidden;
 }
 
 #main {
   position: relative;
   
-  overflow: hidden;
   background-color: #000;
   z-index: 10;
 }
 
-section {
+section{
+  position: 
+  relative;
   width: 100%;
   min-height: 100vh;
   padding: 2vh 3vh;
@@ -538,18 +540,15 @@ section {
 
 .footer{
   position: fixed;
-  
-  z-index: 9;
-  height: 60vw;
+  height: 100vw;
   width: 100%;
   bottom: 0;
-  left: 0;
-  background-color: red;
-}
-
-.footer h1{
+  background-color: #000;
+  z-index: 9;
   color: #fff;
   font-size: 20rem;
 }
+
+
 
 
