--- a/style.css
+++ b/style.css
@@ -29,14 +29,11 @@ body {
 
 #main {
   position: relative;
-  
-  background-color: #000;
   z-index: 10;
 }
 
 section{
-  position: 
-  relative;
+  position: relative;
   width: 100%;
   min-height: 100vh;
   padding: 2vh 3vh;
@@ -258,8 +255,7 @@ section{
     height: 100%;
     display: inline-block;
     white-space: nowrap;
-    animation: 15s move linear infinite ;
-    
+    animation: 15s move linear infinite ;    
 }
 
 .moving-text-container h1{
@@ -367,6 +363,7 @@ section{
   border-radius: 50%;
   filter: blur(10px);
   animation: page2anime ease-in-out infinite 4s alternate;
+ 
 }
 @keyframes page2anime {
   from {
@@ -531,22 +528,31 @@ section{
   height: 60vh;
   background-color: var(--background-color);
 }
+
 .section-5{
   width: 100%;
   height: 100vh;
+  position: relative;
  
-  /* background-color: var(--background-color); */
-}
+  /* background-color: var(--background-color); / */
+} 
 
 .footer{
   position: fixed;
-  height: 100vw;
   width: 100%;
+  height: 60vw;
   bottom: 0;
   background-color: #000;
   z-index: 9;
+  display: flex;
+  align-items: flex-end;
+  justify-content: center;
+}
+
+.footer h1{
+  font-size: 23vw;
+  text-align: center;
   color: #fff;
-  font-size: 20rem;
 }
 
 
