--- a/style.css
+++ b/style.css
@@ -545,15 +545,108 @@ section{
   background-color: #000;
   z-index: 9;
   display: flex;
-  align-items: flex-end;
+  align-items:center;
   justify-content: center;
+  flex-direction: column;
+  padding-top:200px ;
+
+}
+
+.footer-info{
+  width: 100%;
+  height: 30vh;
+/* background-color: red; */
+display: flex;
+}
+
+.footer-left{
+  /* width: 50%; */
+  height: 100%;   
+  flex-basis: 60%;
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  flex-direction: column;
+  padding: 0 7rem;
+}
+
+.footer-left h2{
+  font-size: 2rem;
+  color: #fff;
+}
+
+.footer-right{
+  /* width: 50%; */
+  height: 100%;  
+  flex-basis: 40%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 0 80px;
+}
+
+.right-info{
+  margin-left: 6rem;
+}
+
+.footer-right h4{
+  color: #fff;
+  font-size: 1.2rem;
+  
+}
+
+.input-box{
+  margin-top:20px;
+  border-bottom: 1px solid #ffffff83;
+  padding-bottom: 10px;
+}
+
+.input-box i{
+  color: #fff;
+}
+
+input{
+  background-color: transparent;
+  outline: none;
+  border: none;
+  width: 17rem;
+  
+}
+
+input::placeholder{
+  color: #ffffffa9;
 }
 
 .footer h1{
   font-size: 23vw;
   text-align: center;
   color: #fff;
+  border-bottom: 1px solid #ffffff30;
+  line-height: 17rem;
+  /* margin-bottom: 3vw; */
 }
+
+.social-links{
+  margin-top: 0.8rem;
+  width: 100%;
+  height: 2rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  gap: 18rem;
+}
+
+.social-links h5{
+  font-size: 1rem;
+  color: #fff;
+}
+
+.social-links i{
+  margin-right: 3px;
+}
+
+
 
 
 
