--- a/style.css
+++ b/style.css
@@ -30,13 +30,14 @@ body {
 #main {
   position: relative;
   z-index: 10;
+  overflow: hidden;
 }
 
 section{
   position: relative;
   width: 100%;
   min-height: 100vh;
-  padding: 2vh 3vh;
+  /* padding: 2vh 3vh; */
 }
 
 /* -----Navigation Bar----- */
@@ -51,11 +52,47 @@ section{
   display: flex;
   align-items: center;
   justify-content: space-between;
+  padding: 2vw 3vw;
+  z-index: 99;
 }
 
 .logo {
-  padding: 10px;
   flex-basis: 60%;
+}
+
+.menu-btn{
+  padding: 3.3vw 8vw;
+  font-size: 1.2rem;
+  /* width: 80px; */
+  background-color: transparent;
+  outline: none;
+  border: 1px solid #00000063;
+  border-radius: 10vw;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  display: none;
+  z-index: 9999;
+  position: relative;
+}
+
+.ham-menu{
+  position: fixed;
+  width: 100%;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.322);
+  z-index: 98;
+  transition: all ease 0.5s;
+  /* top: -100%; */
+}
+
+.menu-container{
+  background-color: #fff;
+  width: 100%;
+  height: 50%;
+  z-index: 9;
+  border-bottom-left-radius: 10vw;
+  border-bottom-right-radius: 10vw;
 }
 
 .nav-buttons {
@@ -558,14 +595,6 @@ section{
   text-align: justify;
 }
 
-/* .section-5{
-  width: 100%;
-  height: 100vh;
-  position: relative;
- 
-  /* background-color: var(--background-color); / */
-
-
 .footer{
   position: fixed;
   width: 100%;
@@ -674,6 +703,31 @@ input::placeholder{
 
 .social-links i{
   margin-right: 3px;
+}
+
+@media (max-width:600px) {  
+
+  #navbar {
+    padding: 8vw 5vw;
+  }
+
+  .logo {
+    /* padding: 10px; */
+    flex-basis: 60%;
+  }
+
+  .logo img{
+    height: 15vw;
+  }
+
+  .menu-btn{
+    display: block;
+  }
+
+  .nav-buttons {
+    display: none;
+  }
+  
 }
 
 
