--- a/style.css
+++ b/style.css
@@ -53,11 +53,13 @@ section{
   align-items: center;
   justify-content: space-between;
   padding: 2vw 3vw;
-  z-index: 99;
+  z-index: 999999;
+  /* background-color: red; */
 }
 
 .logo {
   flex-basis: 60%;
+  transition: all 0.3s;
 }
 
 .menu-btn{
@@ -72,7 +74,7 @@ section{
   align-items: center;
   justify-content: space-evenly;
   display: none;
-  z-index: 9999;
+  z-index: 98;
   position: relative;
 }
 
@@ -83,16 +85,29 @@ section{
   background-color: rgba(0, 0, 0, 0.322);
   z-index: 98;
   transition: all ease 0.5s;
-  /* top: -100%; */
+  top: -100%;
 }
 
 .menu-container{
-  background-color: #fff;
+  background-color: var(--background-color);
   width: 100%;
   height: 50%;
-  z-index: 9;
+  z-index: 99;
   border-bottom-left-radius: 10vw;
   border-bottom-right-radius: 10vw;
+}
+
+.cont h1{
+  font-size: 4rem;
+  line-height: 15vw;
+}
+.cont{
+  height: 100%;
+  padding: 8vw 5vw;
+  display: flex;
+  align-items: flex-end;
+  justify-content: flex-end;
+  flex-direction: column;
 }
 
 .nav-buttons {
