--- a/style.css
+++ b/style.css
@@ -167,6 +167,7 @@ section{
   align-items: flex-end;
   justify-content: space-between;
   border-bottom: 1px solid #00000057;
+  padding: 0 3vw;
   padding-bottom: 50px;
 }
 
@@ -206,20 +207,12 @@ section{
   margin-right: 20px;
 }
 
-.video-container {
-  margin-top: 50px;
-  margin-bottom: 100px;
-  width: 100%;
-  /* height: 10vw; */
+video {
   position: relative;
-}
-
-.video-container video {
+  border-radius: 30px;
+  margin: 4vw 1vw ;
   width: 100%;
-  /* height: 100%; */
-  border-radius: 20px;
-  z-index: 998;
-  position: relative;
+  z-index: 9;
 }
 
 .hero-animation-shape {
@@ -744,7 +737,6 @@ input::placeholder{
   }
   
 }
-
 
 
 
