--- a/style.css
+++ b/style.css
@@ -172,8 +172,8 @@ section{
 }
 
 .left {
-  flex-basis: 28%;
-  width: 100%;
+  
+  width: 30%;
   height: 100%;
   display: flex;
   align-items: end;
@@ -187,8 +187,7 @@ section{
 }
 
 .right {
-  flex-basis: 50%;
-  width: 100%;
+  width: 70%;
   height: 100%;
   display: flex;
   align-items: end;
@@ -735,6 +734,88 @@ input::placeholder{
   .nav-buttons {
     display: none;
   }
+
+#hero{
+  height: 65vh;
+  flex-direction: column-reverse;
+  padding-top:10vw;
+}
+  
+  .left {
+    width: 100%;
+    padding: 5vw;
+    align-items: center;
+    
+    margin-top: 10vw;
+  }
+  
+  .left h2 {
+    font-size: 1.4rem;
+    line-height:6vw;
+    letter-spacing: -1px;
+    padding-right: 20px;
+    z-index: 10;
+  }
+  
+  .right {
+    align-items: center;
+    margin-bottom: 10vw;
+  }
+  
+  .right h1 {
+    font-size: 4rem;
+    line-height: 15vw;
+  }
+  
+  video {
+    width: 98%;
+    border-radius: 20px;
+  }
+  
+  .hero-animation-shape {
+    position: absolute;
+    width: 46vw;
+    height: 36vw;
+    right: 18px;
+    top: 70vh;
+    filter: blur(30px);
+    z-index: 8;
+  }
+  
+  .shape-1 {
+    position: absolute;
+    width: 66vw;
+    height: 40vw;
+    background-color: var(--accent-color);
+    border-radius: 50%;
+    filter: blur(20px);
+    border-top-left-radius: 50%;
+    border-bottom-left-radius: 50%;
+    /* transform:rotateY('30deg'); */
+  }
+  .shape-2 {
+    position: absolute;
+    width: 30vw;
+    height: 30vw;
+    background-color: var(--accent-color);
+    border-radius: 50%;
+    filter: blur(20px);
+    border-top-left-radius: 50%;
+    border-bottom-left-radius: 50%;
+    animation: anime-1 ease infinite 3s alternate;
+  }
+  .shape-3 {
+    position: absolute;
+    width: 30vw;
+    height: 30vw;
+    background-color: var(--accent-color);
+    border-radius: 50%;
+    filter: blur(20px);
+    border-top-left-radius: 50%;
+    border-bottom-left-radius: 50%;
+    animation: anime-2 linear infinite 3s alternate;
+  }
+  
   
 }
 
