--- a/style.css
+++ b/style.css
@@ -421,7 +421,7 @@ video {
 
 /* ----------------------------Section-3---------------------- */
 .section-3{
-  padding: 0;
+  padding-top:7rem;
   background-color: var(--background-color);
 }
 
@@ -892,6 +892,65 @@ input::placeholder{
     filter: blur(8px);
     transform: translate(-10%,10%) skew(-20deg);
   }
+}
+
+.bullet-point{
+  width: 8px;
+  height: 8px;
+  padding: 2px;
+  background-color: var(--accent-color);
+  border-radius: 50%;
+}
+
+.featured-projects{
+  width: 100%; 
+  position: relative;
+}
+
+.project{
+  width: 100%;
+  height: 15vh;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.25);
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 2vw;
+  overflow: hidden;
+  transition: 0.3s linear ;
+}
+
+.project h1{
+  font-size: 3rem;
+  z-index: 12;
+}
+
+.project-for{
+  text-align: end;
+  z-index: 12;
+}
+
+.project-for p:nth-child(1){
+  font-weight: 200;
+  font-size: 0.9rem;
+}
+.project-for p:nth-child(2){
+  font-family: 'NeueHaasDisplay-Light' ;
+  font-size: 0.9rem;
+}
+
+ .project .overlay{
+  width: 100%;
+  height: 15vh;
+  background-color: #FF9831;
+  position: absolute;
+  top: -15vh;
+  left: 0;
+  transition: 0.2s;
+ }
+
+.project:hover .overlay{
+  top: 0;
 }
   
   
